compiler/testData/diagnostics/tests/multiplatform/hmpp/kt-55570.fir.kt
// MODULE: common
// TARGET_PLATFORM: Common

// MODULE: main()()(common)
<!ACTUAL_WITHOUT_EXPECT!>actual class A<!>
